# iso-standards-downloader

./: .gitignore  README.md  iso_standard_downloader.py  pyproject.toml
iso_standards_downloader/: iso_standards_downloader.py
