[tool.poetry]
name = "iso-standards-downloader"
version = "0.1.0"
description = "A python module to download ISO Standards from https://standards.iso.org/iso-iec/"
authors = ["Dniel97"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Dniel97/iso-standards-downloader"

[tool.poetry.scripts]
iso-standards-downloader = "iso_standards_downloader.iso_standards_downloader:run"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
tqdm = "^4.26.3"
click = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"